* ext/objspace/objspace.c (reachable_object_from_root_i): use   compare_by_identity hash to avoid hash modify problem   during iteration.   [Bug #9252] * ext/objspace/objspace.c (reachable_objects_from_root): ditto.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@44241 b2dd03c8-39d4-4d8f-98ff-823fe69b080e